<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Remake</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    	<string name="username">Username</string>
  <string name="password">Password</string>
  <string name="login">Log in</string>
  <string name="also_login">How will you like to login</string>
  <string name="facebook">Facebook</string>
  <string name="twitter">Twitter</string>

</resources>
